FIX: CorrecciÂón de errores, DOCS: Actualización de documentación y creación de un manual de usuarios, REFACTOR: Cambios de código; Implementación del ejecutable