@@ -9,13 +9,19 @@ import javafx.scene.control.ButtonType;
 import javafx.stage.Stage;
 
 import java.io.IOException;
+import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.ResourceBundle;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
 
 import javafx.scene.image.Image;
+import upse.calculacion.Mad.Mad_factura;
 import upse.calculacion.Mad.Mad_parametro;
 import upse.calculacion.general.Mod_general;
+import upse.calculacion.general.Mod_log;
 import upse.calculacion.general.Mod_VariablesGlobales;
 import upse.calculacion.modelo.Usuario;
 
@@ -24,16 +30,21 @@ import upse.calculacion.modelo.Usuario;
  */
 public class App extends Application {
 
+    private static final int INTERVALO_REINTENTO_SRI_MINUTOS = 5;
+    private static final int ANTIGUEDAD_MAXIMA_REINTENTO_HORAS = 24;
+
     private static Scene scene;
     private static ResourceBundle bundle;
     private static Usuario usuarioActual;
+    private static ScheduledExecutorService reintentosSri;
 
     @Override
     public void start(Stage stage) throws IOException {
-        cambiarIdioma(new Locale("es")); // Default language
+        cambiarIdioma(Locale.of("es")); // Default language
         cargarParametrosGenerales();
+        iniciarReintentosSriEnSegundoPlano();
         scene = new Scene(loadFXML("Login"), 640, 460);
-        
+
         // Cargar hoja de estilos global
         try {
             scene.getStylesheets().add(App.class.getResource("/upse/calculacion/vistas/styles.css").toExternalForm());
@@ -79,6 +90,30 @@ public class App extends Application {
         } catch (Exception e) {
             System.err.println("No se pudo cargar el parámetro IVA, se usará el valor por defecto: " + e.getMessage());
         }
+    }
+
+    /**
+     * Reintenta cada {@link #INTERVALO_REINTENTO_SRI_MINUTOS} minutos la autorización SRI de las
+     * facturas que quedaron en estado PENDIENTE (contingencia: el SRI no respondió a tiempo al emitir).
+     * No afecta la venta ya registrada; solo actualiza fe_estado/fe_autorizacion cuando el SRI conteste.
+     */
+    private static void iniciarReintentosSriEnSegundoPlano() {
+        reintentosSri = Executors.newSingleThreadScheduledExecutor(r -> {
+            Thread hilo = new Thread(r, "reintentos-sri-segundo-plano");
+            hilo.setDaemon(true);
+            return hilo;
+        });
+        reintentosSri.scheduleWithFixedDelay(() -> {
+            try {
+                Mad_factura madFactura = new Mad_factura();
+                List<String> pendientes = madFactura.listarPendientesSri(ANTIGUEDAD_MAXIMA_REINTENTO_HORAS);
+                for (String numFac : pendientes) {
+                    madFactura.reintentarAutorizacionSri(numFac);
+                }
+            } catch (Exception e) {
+                Mod_log.warning("Reintento automático de autorización SRI falló: " + e.getMessage());
+            }
+        }, INTERVALO_REINTENTO_SRI_MINUTOS, INTERVALO_REINTENTO_SRI_MINUTOS, TimeUnit.MINUTES);
     }
 
     public static ResourceBundle getBundle() {
